Bug 429138 - "Configure Desktop Icon Sizes" does not change desktop icon sizes
Summary: "Configure Desktop Icon Sizes" does not change desktop icon sizes
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_icons (other bugs)
Version First Reported In: 5.20.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-11-15 10:33 UTC by Christian Janoff
Modified: 2020-12-11 21:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Janoff 2020-11-15 10:33:27 UTC
SUMMARY

Trying to change icon sizes in system settings doesn't actually change the icon sizes. Right-clicking on the desktop does.


STEPS TO REPRODUCE
1. open "System Settings"
2. go to "Icons"
3. select "Configure Icon Sizes"
4. change the setting for "Desktop"

5. right-click on the desktop
6. select "Icons"->"Icon Size" and choose a different icon size

OBSERVED RESULT

- after step 4 all desktop icons still have the same size
- after step 6 the desktop icons change the size immediately

EXPECTED RESULT

- setting "Configure Icon Sizes" has immediate effect

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE Neon (neon-user-20201105-0946.iso)
(available in About System)
KDE Plasma Version: 5.20.2
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-11-16 19:24:36 UTC
Yeah. That one can just be removed entirely.
Comment 2 Bug Janitor Service 2020-11-16 19:33:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/464
Comment 3 Nate Graham 2020-12-11 21:08:42 UTC
Git commit e12f76f54f9f135992132be867da435f1c328f21 by Nate Graham.
Committed on 11/12/2020 at 21:08.
Pushed by ngraham into branch 'master'.

[kcms/icons] Don't offer to set desktop icon size

This is confusing since desktop icon sizes are set directly in the
desktop containment config window, and changing the desktop icon size in
this KCM has no visible effect at all. Let's not show it at all.
FIXED-IN: 5.21

M  +0    -1    kcms/icons/iconsizecategorymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/e12f76f54f9f135992132be867da435f1c328f21