[kcms/icons] Don't offer to set desktop icon size

This is confusing since desktop icon sizes are set directly in the
desktop containment config window, and changing the desktop icon size in
this KCM has no visible effect at all. Let's not show it at all.

BUG: 429138
FIXED-IN: 5.21